--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -10,3 +10,8 @@
   object-fit: contain;
   object-position: center;
 }
+
+.elements__like:hover {
+  opacity: 0.6;
+  transition: 0.3s opacity ease-in-out;
+}
