--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,5 @@
 .popup__close-button {
-  background: #000000;
+  background: rgba(0, 0, 0, 0);
   border: none;
   background-image: url(../../../images/popup-close-iqon.svg);
   padding: 0;
@@ -14,6 +14,7 @@
 
 .popup__close-button:hover {
   opacity: 0.6;
+  transition: 0.3s opacity ease-in-out;
 }
 
 @media screen and (max-width: 540px){
