--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,6 +4,10 @@
   font-size: 42px;
   line-height: 56px;
   margin: 0 0 16px;
+  text-overflow: ellipsis;
+  max-width: 450px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 960px){
@@ -15,7 +19,6 @@
 
 @media screen and (max-width: 600px){
   .profile__name {
-    font-size: 27px;
     text-align: center;
     margin: 0 auto;
   }
