--- a/blocks/profile/__position/profile__position.css
+++ b/blocks/profile/__position/profile__position.css
@@ -4,6 +4,10 @@
   font-size: 18px;
   line-height: 22px;
   margin: 0;
+  text-overflow: ellipsis;
+  max-width: 450px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 600px){
