--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -15,6 +15,6 @@
 }
 
 .popup__save-button:hover {
-  opacity: 0.8;
-  transition: 0.3s opacity ease-in-out;
+  background: rgba(0, 0, 0, 0.8);
+  transition: 0.3s ease-in-out;
 }
