--- a/blocks/cards/__like/_active/cards__like_active.css
+++ b/blocks/cards/__like/_active/cards__like_active.css
@@ -1,4 +1,4 @@
-.elements__like_active {
+.cards__like_active {
   background-image: url(../../../../images/elements-like-active.svg);
   outline: none;
 }
