--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,6 +5,7 @@
   line-height: 17px;
   color: #000000;
   border: none;
+  outline: none;
   padding: 30px 0 13px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
