--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,6 +8,9 @@
 @import url(./__image/popup__image.css);
 @import url(./__text/popup__text.css);
 @import url(./__figure/popup__figure.css);
+@import url(./__error/popup__error.css);
+@import url(./__error/_visible/popup__error_visible.css);
+@import url(./__save-button/_disabled/popup__save-button_disabled.css);
 
 .popup {
   position: fixed;
